@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns="http://code.google.com/p/open-zwave/">
+	<!-- Configuration Parameters -->
+	<CommandClass id="112">
+		<Value type="list" genre="config" index="99" label="Fault Restore Report" size="1" min="0" max="255" value="255">
+			<Help>
+				Enable or disable Basic Sets of 0x00 on a fault restore to nodes in Group 2. Default = Enabled.
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Enabled" value="255"/>
+		</Value>
+	</CommandClass>
+</Product>
