@@ -537,6 +537,9 @@
 	<Manufacturer id="0230" name="ID Lock">
 		<Product type="0003" id="0001" name="ID Lock 101" config="idlock/idlock101.xml"/>
 	</Manufacturer>
+	<Manufacturer id="011f" name="Ingersoll Rand">
+		<Product type="0001" id="0002" name="DWZWAVE1" config="ingersoll/dwzwave1.xml"/>
+	</Manufacturer>
 	<Manufacturer id="003a" name="Inlon Srl">
 	</Manufacturer>
 	<Manufacturer id="0077" name="Innovus">
