@@ -147,6 +147,7 @@ Version 1.5
  - Add Fibaro FGMS001-ZW5 Motion Sensor (Nechry)
  - Pull Request #1086 - Add definitions for 3 Cooper Aspire RF devices from drkp (Nechry)
  - Add Coolcam Siren Alarm NAS-AB01Z (Nechry)
+ - Add Ingersoll Rand DWZWAVE1 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
